# Td5OpenComESP

./: .gitignore  README.md
td5opencomesp/: esp_panel_board_custom_conf.h  lv_conf.h  lvgl_v8_port.h  td5comm.cpp  td5comm.h  td5commhandler.cpp  td5commhandler.h  td5opencomesp.h  td5opencomesp.ino  uieventshandler.cpp  uieventshandler.h  uipostinit.cpp  uipostinit.h
td5opencomesp/src/rtc/: ds3231.c  ds3231.h
td5opencomesp/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
td5opencomesp/src/ui/components/: ui_comp_hook.c
td5opencomesp/src/ui/fonts/: ui_font_FontDigit58Num.c  ui_font_Tahoma80Num.c  ui_font_Tahoma96Num.c
td5opencomesp/src/ui/images/: ui_img_espp4_icon_obd_on_png.c  ui_img_espp4_icon_sd_on_png.c  ui_img_espp4_icon_sd_rec_png.c  ui_img_espp4_icon_wifi_on_png.c  ui_img_espp4_icons_alloff_png.c  ui_img_panelinstrumentgaugesbkg_png.c  ui_img_panelinstrumentgaugesneedlelarge_png.c  ui_img_panelinstrumentgaugesneedlelargegray_png.c  ui_img_panelinstrumentgaugesneedlemedium_png.c  ui_img_panelinstrumentgaugesneedlemediumyellow_png.c
td5opencomesp/src/ui/screens/: ui_ScreenEcu.c  ui_ScreenEcu.h  ui_ScreenFuelling.c  ui_ScreenFuelling.h  ui_ScreenInstrument.c  ui_ScreenInstrument.h  ui_ScreenPreferences.c  ui_ScreenPreferences.h  ui_ScreenStartup.c  ui_ScreenStartup.h  ui_ScreenTest.c  ui_ScreenTest.h
